
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 FEB 09a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - updated some reactions requiring BOLSIG+ curve fits 

  
2024 FEB 08a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - fixed reaction 2 producing NH3v


2024 FEB 07b
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - turned off the production of NH3v (need to find rate properly)
  
  
2024 FEB 07a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - fixed problem with 3-body reaction rates 
    - removed implicit treatment of Townsend ionization reactions
    

2024 FEB 06b
  * in model/thermo/_generic/enthalpy.c
    - added the vibrational energy to species NH3v
    

2024 FEB 06a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Qe() and find_dSe_dU_transport_Qe(), added relaxation with translational energy
      modes of the neutrals
  * in model/fluid/doc/Transport_Equations/report.tex
    - in the section "Electron Energy Relaxation Terms", added relaxation with translational energy
      modes of the neutrals
    

2024 FEB 05a
  * in model/chem/_NH3_Plasma_10s/arakoni2007.c
    - improved Arakonic model reactions
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_NO()


2024 FEB 02a
  * in model/chem/_NH3_Plasma_10s/chem.c
    - added CHEMMODEL_ARAKONI2007 model
  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c 
    and model/transport/_Dixon-Lewis/transport.c
    - added species NH3v
  * in model/chem/_NH3_Plasma_10s/
    - added arakoni2007.c
    

2024 FEB 01a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_name_fluid() and find_post_variable_value_fluid(), fixed
      bugs related to AVERAGEDRATES